Improve download recovery flow:

(1) refine strings in download recovery dialog
(2) remove all message leads, and keep title and message body to simply
    previously lengthy text in download recovery dialog
(3) refine description strings that used to explain the reason why download
    is blocked in chrome://downloads (text in orange)
(4) If download danger type is DOWNLOAD_DANGER_TYPE_DANGEROUS_FILE, when user
    try to recover a blocked download, directly proceed instead of showing
    download danger prompt.
go/fix_download_recovery  for more detail

BUG=640673
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2314903003
Cr-Commit-Position: refs/heads/master@{#418340}

Former-commit-id: f857966ed00a2e7703f98f901d28ae3677592341